# ArchMK2

./: .dockerignore  .env.example  .env.otel  .eslintignore  .eslintrc.cjs  .fallowrc.json  .gitignore  .gitleaks.toml  .lintstagedrc.mjs  .markdownlint.json  .mcp.json  .npmrc  .portal.start  .secretlintignore  .secretlintrc.json  .syncpackrc.js  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN.md  DOCUMENTATION_INDEX.md  ENVIRONMENT_FILES_GUIDE.md  GEMINI.md  LIQUID_GLASS_CHECKLIST.md  PHASE3_MUI_BASE_MIGRATION.md  PRODUCT.md  README.md  SECURITY.md  SECURITY_USABILITY_REPORT.md  adaptive-mode.md  docker-compose.monitoring.yml  docker-compose.pooler.yml  docker-compose.portal.yml  docker-compose.production.yml  docker-compose.replica.yml  docker-compose.security.yml  docker-compose.tools.yml  eslint.boundaries.cjs  knip.json  (+9 more)
.aicoding/: adaptive-mode.md
.audit/: database-audit.md  frontend-audit.md  infrastructure-audit.md  rls-report.md  security-audit.md
.claude/: AGENTS.md  AGENT_CONTRACTS.md  FUNCTIONALITY_READINESS_AUDIT.md  INDEX.md  LEARNED.md  MONOREPO_ARCHITECTURE_CHECKLIST.md  MONOREPO_STATUS.md  POLICY_SSOT_TEMPLATE.md  REFERENCE_DECISION_TREE.md  SAFETY_UPGRADE_GUIDE.md  SECURITY_RULES.md  SOUL.md  STATE.md  WORKFLOW.md  learning-log.md  settings.json
.codebase-viz/: cache.json  db-screen.md  rendering.md  screen-component.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
apps/portal/plugins/rust-telemetry-engine/: Cargo.toml  index.tsx
apps/portal/plugins/rust-telemetry-engine/src/: main.rs
(+970 files in other folders)
