[package]
name = "rust-telemetry-engine"
version = "1.0.0"
edition = "2021"
authors = ["Arch Core AI Group"]

[dependencies]
# We leverage zero external crates to guarantee sub-second compiles and extreme runtime efficiency

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
